--- a/assets/css/sass/base/typography/_fonts.scss
+++ b/assets/css/sass/base/typography/_fonts.scss
@@ -1,21 +1,13 @@
 @font-face {
-  font-family: Graphik;
+  font-family: Mariupol;
   font-weight: normal;
 
-  src: url('../../uploads/2016/10/graphik/regular/Graphik-Regular-Web.eot'); /* IE9 Compat Modes */
-  src: url('../../uploads/2016/10/graphik/regular/Graphik-Regular-Web.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../../uploads/2016/10/graphik/regular/Graphik-Regular-Web.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../../uploads/2016/10/graphik/regular/Graphik-Regular-Web.woff') format('woff'), /* Pretty Modern Browsers */
-    url('../../uploads/2016/10/graphik/regular/Graphik-Regular-Web.ttf')  format('truetype'); /* Safari, Android, iOS */
+  src: url('assets/fonts/mariupol/Mariupol-Regular.woff') format('woff');
 }
 
 @font-face {
-  font-family: Graphik;
+  font-family: Mariupol;
   font-weight: bold;
 
-  src: url('../../uploads/2016/10/graphik/medium/Graphik-Medium-Web.eot'); /* IE9 Compat Modes */
-  src: url('../../uploads/2016/10/graphik/mediumGraphik-Medium-Web.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../../uploads/2016/10/graphik/medium/Graphik-Medium-Web.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../../uploads/2016/10/graphik/medium/Graphik-Medium-Web.woff') format('woff'), /* Pretty Modern Browsers */
-    url('../../uploads/2016/10/graphik/medium/Graphik-Medium-Web.ttf')  format('truetype'); /* Safari, Android, iOS */
+  src: url('assets/fonts/mariupol/Mariupol-Medium.woff') format('woff');
 }
