--- a/assets/css/sass/layout/_entry-cards.scss
+++ b/assets/css/sass/layout/_entry-cards.scss
@@ -41,8 +41,13 @@
   }
   
   &-header {
-    margin-top: 11px;
-    margin-bottom: 13px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+
+    @media screen and ( min-width: $md ) {
+      margin-top: 11px;
+      margin-bottom: 13px;
+    }
   }
 
   &-title {
