update font-weight. bold -> $font-weight-medium

--- a/assets/css/sass/abstracts/_variables.scss
+++ b/assets/css/sass/abstracts/_variables.scss
@@ -173,3 +173,7 @@ $spacers: (
 				y: ($spacer-y * 3)
 		)
 ) !default;
+
+$font-weight-normal: 400;
+$font-weight-medium: 500;
+$font-weight-bold: 700;
