--- a/assets/css/sass/base/_normalize.scss
+++ b/assets/css/sass/base/_normalize.scss
@@ -79,7 +79,7 @@ abbr[title] {
 
 b,
 strong {
-	font-weight: bold;
+	font-weight: $font-weight-medium;
 }
 
 dfn {
@@ -235,7 +235,7 @@ textarea {
 }
 
 optgroup {
-	font-weight: bold;
+	font-weight: $font-weight-medium;
 }
 
 table {
