--- a/assets/css/sass/base/typography/_headings.scss
+++ b/assets/css/sass/base/typography/_headings.scss
@@ -11,7 +11,7 @@ h6 {
 	margin: 0 0 1.5rem 0;
 	color: $color__text;
 	font-family: $font__headings;
-	font-weight: bold;
+	font-weight: $font-weight-medium;
 }
 
 h1 {
