--- a/assets/css/sass/components/_buttons.scss
+++ b/assets/css/sass/components/_buttons.scss
@@ -44,7 +44,7 @@
 	border: 2px solid;
 	border-radius: 3px;
 	font-size: 1em;
-	font-weight: bold;
+	font-weight: $font-weight-medium;
 }
 
 button,
