--- a/assets/css/sass/editor/_editor-normalize.scss
+++ b/assets/css/sass/editor/_editor-normalize.scss
@@ -85,7 +85,7 @@ abbr[title] {
 
 b,
 strong {
-	font-weight: bold;
+	font-weight: $font-weight-medium;
 }
 
 dfn {
@@ -241,7 +241,7 @@ textarea {
 }
 
 optgroup {
-	font-weight: bold;
+	font-weight: $font-weight-medium;
 }
 
 table {
