--- a/assets/css/sass/layout/_entry-cards.scss
+++ b/assets/css/sass/layout/_entry-cards.scss
@@ -31,7 +31,7 @@
 
     &-category {
       text-transform: uppercase;
-      font-weight: bold;
+      font-weight: $font-weight-medium;
       font-size: 12px;
       line-height: 1;
       letter-spacing: .1em;
