--- a/assets/css/sass/layout/_header.scss
+++ b/assets/css/sass/layout/_header.scss
@@ -61,7 +61,7 @@
 	padding-top: 1em;
 	color: $color__text;
 	font-family: $font__headings;
-	font-weight: bold;
+	font-weight: $font-weight-medium;
 	a {
 		color: $color__text;
 	}
