--- a/assets/css/sass/templates/_page-portfolio-single.scss
+++ b/assets/css/sass/templates/_page-portfolio-single.scss
@@ -87,7 +87,7 @@
 		}
 	}
 	.project-meta-item-desc {
-		font-weight: bold;
+		font-weight: $font-weight-medium;
 	}
 	.project-meta-cats,
 	.project-meta-tags {
