--- a/assets/css/sass/components/_accessibility.scss
+++ b/assets/css/sass/components/_accessibility.scss
@@ -18,7 +18,7 @@
 		color: $color__text-screen;
 		display: block;
 		@include font-size(0.875);
-		font-weight: bold;
+		font-weight: $font-weight-medium;
 		height: auto;
 		left: 5px;
 		line-height: normal;
