--- a/assets/css/sass/layout/_entry-meta.scss
+++ b/assets/css/sass/layout/_entry-meta.scss
@@ -26,7 +26,7 @@
 .entry-meta-item.cat-links {
 	@include font-size( 0.875 );
 	display: block;
-	font-weight: bold;
+	font-weight: $font-weight-medium;
 	line-height: 1.7142857143;
 	letter-spacing: 2px;
 	text-transform: uppercase;
