--- a/editor-style.css
+++ b/editor-style.css
@@ -96,7 +96,7 @@ acronym {
 
 b,
 strong {
-	font-weight: bold;
+	font-weight: 500;
 }
 
 dfn,
@@ -156,7 +156,7 @@ textarea {
 }
 
 optgroup {
-	font-weight: bold;
+	font-weight: 500;
 }
 
 table {
@@ -185,7 +185,7 @@ h6 {
 	margin: 0 0 1.5rem 0;
 	color: #585858;
 	font-family: Mariupol, Helvetica, Arial, sans-serif;
-	font-weight: bold;
+	font-weight: 500;
 }
 
 h1 {
@@ -333,7 +333,7 @@ li > ol {
 }
 
 dt {
-	font-weight: bold;
+	font-weight: 500;
 }
 
 dd {
@@ -384,7 +384,7 @@ thead th {
 	background-color: #f1f1f1;
 	font-size: 13.5px;
 	font-size: 0.75rem;
-	font-weight: bold;
+	font-weight: 500;
 	line-height: 27px;
 	line-height: 1.5rem;
 	text-transform: uppercase;
@@ -806,9 +806,16 @@ blockquote.alignright {
 
 @font-face {
 	font-family: Mariupol;
-	font-weight: bold;
+	font-weight: 500;
 
 	src: url('assets/fonts/mariupol/Mariupol-Medium.woff') format('woff');
+}
+
+@font-face {
+	font-family: Mariupol;
+	font-weight: bold;
+
+	src: url('assets/fonts/mariupol/Mariupol-Bold.woff') format('woff');
 }
 
 @media screen and (min-width: 768px) {
