--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ acronym {
 
 b,
 strong {
-	font-weight: bold;
+	font-weight: 500;
 }
 
 dfn,
@@ -223,7 +223,7 @@ textarea {
 }
 
 optgroup {
-	font-weight: bold;
+	font-weight: 500;
 }
 
 table {
@@ -589,7 +589,7 @@ h6 {
 	margin: 0 0 1.5rem 0;
 	color: #585858;
 	font-family: Mariupol, Helvetica, Arial, sans-serif;
-	font-weight: bold;
+	font-weight: 500;
 }
 
 h1 {
@@ -737,7 +737,7 @@ li > ol {
 }
 
 dt {
-	font-weight: bold;
+	font-weight: 500;
 }
 
 dd {
@@ -767,7 +767,7 @@ thead th {
 	background-color: #f1f1f1;
 	font-size: 13.5px;
 	font-size: 0.75rem;
-	font-weight: bold;
+	font-weight: 500;
 	line-height: 27px;
 	line-height: 1.5rem;
 	text-transform: uppercase;
@@ -847,7 +847,7 @@ input[type='submit'],
 	background-color: transparent;
 	background-image: none;
 	font-size: 1em;
-	font-weight: bold;
+	font-weight: 500;
 	text-align: center;
 	vertical-align: middle;
 	white-space: nowrap;
@@ -1295,7 +1295,7 @@ p > video {
 	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
 	font-size: 15.75px;
 	font-size: 0.875rem;
-	font-weight: bold;
+	font-weight: 500;
 	line-height: normal;
 	text-decoration: none;
 }
@@ -1427,7 +1427,7 @@ p > video {
 	font-family: Mariupol, Helvetica, Arial, sans-serif;
 	font-size: 27px;
 	font-size: 1.5rem;
-	font-weight: bold;
+	font-weight: 500;
 	line-height: 27px;
 	line-height: 1.5rem;
 }
@@ -2074,7 +2074,7 @@ body.single .entry-thumbnail {
 	display: block;
 	font-size: 15.75px;
 	font-size: 0.875rem;
-	font-weight: bold;
+	font-weight: 500;
 	line-height: 1.7142857143;
 	letter-spacing: 2px;
 	text-transform: uppercase;
@@ -2685,7 +2685,7 @@ body.single .entry-thumbnail {
 .cards-entry-meta-category {
 	overflow: hidden;
 	font-size: 12px;
-	font-weight: bold;
+	font-weight: 500;
 	line-height: 1;
 	white-space: nowrap;
 	letter-spacing: 0.1em;
@@ -2997,7 +2997,7 @@ body.single .entry-thumbnail {
 
 .single-portfolio .project-meta-item-desc,
 .single-jetpack-portfolio .project-meta-item-desc {
-	font-weight: bold;
+	font-weight: 500;
 }
 
 .single-portfolio .project-meta-cats,
@@ -3471,9 +3471,16 @@ input[type='submit'].wpcf7-submit:focus {
 
 @font-face {
 	font-family: Mariupol;
-	font-weight: bold;
+	font-weight: 500;
 
 	src: url('assets/fonts/mariupol/Mariupol-Medium.woff') format('woff');
+}
+
+@font-face {
+	font-family: Mariupol;
+	font-weight: bold;
+
+	src: url('assets/fonts/mariupol/Mariupol-Bold.woff') format('woff');
 }
 
 @media screen and (min-width: 415px) {
